# whisper-cpp-test

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/: __init__.py  audio_capture.py  cli.py  diarization.py  system_audio_capture.py  whisper_engine.py
